Fix issues with nav on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .header-logo {
-    flex: 50%;
+    min-width: 150px;
 }
 
 /* Navigation */
